<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HowToPreferenceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    
    <!-- xml    fragment -->
    
    <string name="myLocation">myLocation</string>
    
    <string name="myLoc_sum">我的位置</string>
    
    <string name="myLoc_title">我的位置源</string>
    
    <string name="wireless_network">wireless_network</string>
    
    <string name="wireless_net_summ">使用无线网络</string>
    
    <string name="wireless_net_tit">无线网络</string>
    
    <string name="mymsg">myMsg</string>
    
    <string name="mymsg_sum">个人信息</string>
    
    <string name="mynsg_tit">个人信息</string>
    
    <string name="myname">myname</string>
    
    <string name="myname_sum">姓名</string>
    
    <string name="myname_tit">请输入真实姓名</string>
    
</resources>
